Mon Feb  4 22:45:20 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/mccpDecompress.c: include config.h.

Mon Feb  4 13:13:21 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Updated

	* src/gnome-mud.c: init_window renamed to main_window

	* src/init.c: Renamed of alot of functions to more intelligent
	names.
	* src/keybind.c: Ditto.
	* src/prefs.c: Renamed copy_preferences to prefs_copy.

Mon Feb  4 11:58:14 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Updated

	* src/keybind.c (on_KB_button_delete_clicked): Segfault fix,
	now uses correct profile data.

Mon Feb  4 11:22:15 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* src/init.c: More MCCP #ifdef's
	* src/mccpDecompress.c: Ditto

Mon Feb  4 10:31:36 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Changed a little.

	* src/net.c (make_connection): Added MCCP #ifdef's
	(disconnect): Ditto
	(road_from_connection): Removed unused variable.

Mon Feb  4 09:50:38 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (about_window): added Vashti.
	* src/net.c (read_from_connection): Robin's fix to MCCP segfaults.
	* src/prefs.c (window prefs): added title to preferences window.
	* src/modules.c (do_plugin_information): likewise.
	* po/{ca,es}.po: Updated translations.
	* BUGS: removed old color dialog bug.

Mon Feb  4 09:31:23 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: added Vashti.
	* CONTRIBUTERS: removed.

Sat Feb  2 20:11:21 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* Forgot to cvs remove some stuff in intl/.
	* Removed config.guess & config.sub, provided by automake,
	added them to .cvsignore.

Sat Feb  2 17:29:25 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* Upgraded to gettext 0.10.40.

Sat Feb  2 16:21:42 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/telnet.c: patch from Vashti to get rid of the annoying
	ASCII 255 char at the end of telnet packets in some MUDs.
